--- a/galerie.html
+++ b/galerie.html
@@ -45,7 +45,7 @@
     <main>
         <div class="carte__elisa"> 
             <h2>Elisa Lemonnier</h2>
-                <img class="img__elisa" src="/public/img/galeri/Élisa_Lemonnier_1805-1865 1.webp" alt="">
+                <img class="img__elisa" src="public/img/Élisa_Lemonnier_1805-1865 1.webp" alt="">
                 <div class="carte__texte"> 
                 <ul>
                     <li>née le 24 mars 1805 à Sorèze</li>
@@ -56,7 +56,7 @@
         </div>
         <div class="carte__julie" > 
         <h2>Julie-Victoire Daubié</h2>
-            <img class="img__julie" src="public\img/galeri/J 2.webp" alt="">
+            <img class="img__julie" src="public\img/galeri/J2.webp" alt="">
             <div class="carte__texte">
             <ul>
                 <li>née le 26 mars 1824 à Bains-les-Bains</li>
@@ -69,7 +69,7 @@
         <div class="carte__Malala" >
             
                 <h2>Malala Yousafzai</h2>
-                <img class="img__Malala" src="public/img/galeri/Malala-Yousafzai 2.webp" alt="">
+                <img class="img__Malala" src="public/img/Malala-Yousafzai2.webp" alt="">
             <div class="carte__texte" > 
                 <ul>
                     <li>née le : 12 juillet 1997 à Mingora, Pakistan</li>
