--- a/galerie.html
+++ b/galerie.html
@@ -56,7 +56,7 @@
         </div>
         <div class="carte__julie" > 
         <h2>Julie-Victoire Daubié</h2>
-            <img class="img__julie" src="public\img/galeri/J2.webp" alt="">
+            <img class="img__julie" src="public/img/galeri/J2.webp" alt="">
             <div class="carte__texte">
             <ul>
                 <li>née le 26 mars 1824 à Bains-les-Bains</li>
