--- a/galerie.html
+++ b/galerie.html
@@ -44,41 +44,41 @@
     </header>
     <main>
         <div class="carte__elisa"> 
-            <h2>Elisa Lemonnier</h2>
+            <h2 class="nom">Elisa Lemonnier</h2>
                 <img class="img__elisa" src="public/img/Élisa_Lemonnier_1805-1865 1.webp" alt="">
                 <div class="carte__texte"> 
                 <ul>
-                    <li>née le 24 mars 1805 à Sorèze</li>
-                    <li>morte le 5 juin 1865 à Paris 8ᵉ</li>
+                    <li class="galerie">née le 24 mars 1805 à Sorèze</li>
+                    <li class="galerie">morte le 5 juin 1865 à Paris 8ᵉ</li>
                 </ul>
-                <p>Était une éducatrice française, notamment connue pour avoir fondé l'enseignement professionnel pour les filles (en France).</p>
+                <p class="galerie">Était une éducatrice française, notamment connue pour avoir fondé l'enseignement professionnel pour les filles (en France).</p>
                 </div>  
         </div>
         <div class="carte__julie" > 
-        <h2>Julie-Victoire Daubié</h2>
-            <img class="img__julie" src="public/img/galeri/J2.webp" alt="">
+        <h2 class="nom">Julie-Victoire Daubié</h2>
+            <img class="img__julie" src="public/img/J2.webp" alt="">
             <div class="carte__texte">
             <ul>
-                <li>née le 26 mars 1824 à Bains-les-Bains</li>
-                <li>morte le 26 août 1874 à Fontenoy-le-Château</li>
+                <li class="galerie">née le 26 mars 1824 à Bains-les-Bains</li>
+                <li class="galerie">morte le 26 août 1874 à Fontenoy-le-Château</li>
             </ul>
-            <p>Journaliste française, militante des droits des femmes. Notamment connue pour avoir été la première femme à obtenir le baccalauréat le 17 août 1861.</p>
+            <p class="galerie">Journaliste française, militante des droits des femmes. Notamment connue pour avoir été la première femme à obtenir le baccalauréat le 17 août 1861.</p>
         </div>
      </div>
     
         <div class="carte__Malala" >
             
-                <h2>Malala Yousafzai</h2>
+                <h2 class="nom">Malala Yousafzai</h2>
                 <img class="img__Malala" src="public/img/Malala-Yousafzai2.webp" alt="">
             <div class="carte__texte" > 
                 <ul>
-                    <li>née le : 12 juillet 1997 à Mingora, Pakistan</li>
+                    <li class="galerie">née le : 12 juillet 1997 à Mingora, Pakistan</li>
                 </ul>
-                <p>Militante pakistanaise des droits des femmes. Elle est internationalement connue pour avoir écrit un blog pour la BBC, mais aussi pour une tentative d'assassinat qui l'a gravement blessée.</p>
-                <q>"Une femme n'est pas seulement une mère, une sœur, une épouse. Une femme a le droit d'avoir sa propre identité." <br><br>
+                <p class="galerie">Militante pakistanaise des droits des femmes. Elle est internationalement connue pour avoir écrit un blog pour la BBC, mais aussi pour une tentative d'assassinat qui l'a gravement blessée.</p>
+                <q class="galerie">"Une femme n'est pas seulement une mère, une sœur, une épouse. Une femme a le droit d'avoir sa propre identité." <br><br>
                     Discours du prix Nobel de la paix, 10 octobre 2014
                     </q>
-                <p>cliquez pour voir l'article entier </p>
+                <p class="galerie">cliquez pour voir l'article entier </p>
         </div>
     </div> 
     </main>
