--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <script src="https://animejs.com/lib/anime.min.js"></script>
     <script defer="" src="https://unpkg.com/alpinejs@3.4.2/dist/cdn.min.js"></script>
 	<script src="/assets/fonction.js"></script>
-    <title>Acceuil</title>
+    <title>Accueil</title>
 
     <link rel="stylesheet" href="/src/css/style.css">
 </head>
