--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
     </header>
     <main> 
 
+        <li class="menu__item"><a class="menu__link" href="indexGB.html">Homepage</a></li>
+        <li class="menu__item"><a class="menu__link" href="article1GB.html">Education and Girls</a></li>
+        <li class="menu__item"><a class="menu__link" href="article2GB.html">Malala Yousafzai</a></li>
+        <li class="menu__item"><a class="menu__link" href="article3GB.html">Girl Rising, a documentary by Richard Robbins...</a></li>
+        <li class="menu__item"><a class="menu__link" href="">Frise</a></li>
+        <li class="menu__item"><a class="menu__link" href="gallery.html">Gallery</a></li>
+        <li class="menu__item"><a class="menu__link" href="glossary.html">Glossary</a></li>
+        <li class="menu__item"><a class="menu__link" href="aboutus.html">About us</a></li>
+        <li class="menu__item"><a class="menu__link" href="contactus.html">Contact us</a></li>
+        
 
         <h2 class="titre2">Saviez-vous que la scolarisation des filles peut contribuer à réduire la pauvreté ?</h2>
             <p class="texte">Le féminisme est un mot très souvent utilisé et souvent repris dans une connotation assez péjorative. <br> 
