--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                 <h3>Mentions légales</h3>
                 
                    <a class="footer__mmi" href="http://mmimontbeliard.com/" aria-label="mmi"><img src="assets/icones/logo-mmi1.png" alt="icone mmi"></a> 
-                   <p>projet réalisé dans le cadre d’un exercice pédagogique au département MMI de Montbéliard </p>
+                   <p>projet réalisé dans le cadre d’un exercice pédagogique au département <a href="http://mmimontbeliard.com/"> MMI de Montbéliard </a></p>
 
                 <h3>NOUS contacter</h3>
                     <a class=" footer__mail" href="mailto:ilkaymenn@gmail.com">ilkaymenn@gmail.com</a>
