--- a/article1.html
+++ b/article1.html
@@ -9,7 +9,7 @@
 	<script src="/assets/fonction.js"></script>
     <title>L’éducation et les filles</title>
 
-    <link rel="stylesheet" href="src\css\style.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 
