--- a/article3.html
+++ b/article3.html
@@ -9,7 +9,7 @@
 	<script src="/assets/fonction.js"></script>
     <title>Girl Rising</title>
 
-    <link rel="stylesheet" href="src\css\style.css">
+    <link rel="stylesheet" href="src/css/style.css">
 </head>
 
 
