--- a/apropos.html
+++ b/apropos.html
@@ -66,7 +66,7 @@
         PAQUIER Thomas </h3>
 
     <img src="" alt="">
-    <h3>FéMINICINé<br><br>
+    <h3>FÉMINICIÉ<br><br>
         PASQUARELLI Théo </h3>
 
     <img src="" alt="">
