erreur-dernière-min

--- a/nouscontacter.html
+++ b/nouscontacter.html
@@ -49,22 +49,8 @@
     <main>
 
     <h2>Bienvenue !</h2>
-        <p>Besoin d'aide ? d'informations complémentaires ? d'une discussion privée ? N'hésitez pas à nous contacter !</p>
+        <p class="cont">Besoin d'aide ? d'informations complémentaires ? d'une discussion privée ? N'hésitez pas à nous contacter !</p>
 
-    <!-- <fieldset>
-        <legend>Nom</legend>
-        <input type="text">
-    </fieldset>
-
-    <fieldset>
-        <legend>Mail</legend>
-        <input type="email">
-    </fieldset>
-
-    <fieldset>
-        <legend>Message</legend>
-        <input type="text">
-    </fieldset> -->
 
     
      <div class="section">
@@ -86,7 +72,7 @@
      </div>
 
      <div class="section">
-        <div class="label"><label   for="name">Messages:</label></div>
+        <div class="label"><label   for="name">Messages</label></div>
 
      <textarea class="input_2"  type="text" id="sms" name="sms" required
          minlength="0" maxlength="20">
@@ -99,7 +85,7 @@
      <div class="espace__boutons">
         <div id="rectangle_2"></div>
          <button  class="bouton_envoyer">
-            SOUMMETTRE
+            SOUMETTRE
          </button>
 
          <div class="espace__boutons"></div>
